--- a/monuments.html
+++ b/monuments.html
@@ -26,9 +26,9 @@
   <div class="header">
     <div class="header-name" id="head-name">Monuments of India
     <div class="header-button">
-        <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="https://rebrand.ly/rk/website">Contact</a>
-        <a class="active" href="about.html">About</a>
+       <a class="active" href="monuments.html">Home</a>
+    		<a class="active" href="https://rebrand.ly/rk/website" target="_blank" >Contact</a>
+    		<a class="active" href="about.html">About</a>
     </div>
     <h3>( A TRAVEL WEBSITE )</h3>
     </div>
@@ -196,18 +196,17 @@
 
 <! –– ABOUT US ––>
   <section id="about" class="col-sm-4">
-    <p>Contact Us:<br>
+    <p>Contact Me:<br>
     <a href="https://rebrand.ly/rk/website" target="_blank">Rohit Kumar</a><br>
     <a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
-    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>9084950XXX</a><br>
-    <a href = "mailto: r.k296XXXX@gmail.com"><span class="glyphicon glyphicon-envelope"></span>r.k296XXXX@gmail.com</a><br> 
-    <br>Follows Us:<br>
+    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>  9084950XXX</a><br>
+    <a href = "mailto: r.k296XXXX@gmail.com"><span class="glyphicon glyphicon-envelope"></span>  r.k296XXXX@gmail.com</a><br> 
+    <br>Follow Me:<br>
     <a href="https://rebrand.ly/rk/facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
     <a href="https://rebrand.ly/rk/twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
     <a href="https://rebrand.ly/rk/linkedin" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
     <a href="https://rebrand.ly/rk/instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
-    <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a>
-    <a href="https://rebrand.ly/rk/whatapp" title="WhatsApp" target="_blank" class="fa fa-whatsapp"></a></p></p>
+    <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a></p></p>
   </section></div>
 
 <! –– COPYRIGHT ––>
